SCRUM-56 Fixed dropdown's alignment

--- a/frontend/src/components/styles.css
+++ b/frontend/src/components/styles.css
@@ -312,8 +312,10 @@ body {
 
 .dropdown {
   position: relative;
-  display: inline-block;
-  margin-bottom: 1rem;
+  padding: 0.3rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .dropdown img {
@@ -349,7 +351,7 @@ body {
 }
 
 .dropdown-header.no-arrow {
-  padding-right: 0.675rem;
+  padding-right: 0rem;
 }
 
 .dropdown-list {
@@ -381,9 +383,9 @@ body {
 
 .dropdown:hover .dropdown-bottom-line {
   position: absolute;
-  top: 20px;
+  top: calc(50% + 10px);
   height: 2px;
-  width: calc(100% - 10px);
+  width: 100%;
   background-color: var(--bright);
 }
 
@@ -486,7 +488,6 @@ body {
   justify-content: space-between;
   align-items: center;
   box-shadow: 2px 4px 4px hsl(0, 0%, 80%);
-  /* margin-bottom: 1rem; */
   height: 3.5rem;
   padding: 0 0.5rem;
 }
